kustomize/overlays/scots-lab/apps/emulatorjs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emulatorjs
  labels:
    pod-security.kubernetes.io/enforce: privileged
