kustomize/overlays/scots-lab/apps/emulatorjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emulatorjs
  namespace: emulatorjs
spec:
  selector:
    app: emulatorjs
  ports:
    - name: proxy
      port: 4180
      targetPort: 4180
